# dorans

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
src/dorans/: __init__.py  death.py  xp.py
src/dorans/cdragon/: coordinates.py  downloaded.py  patch.py
src/dorans/tests/: test_death_timer.py  test_patch.py  test_xp.py
