[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dorans"
version = "0.2.8"
readme = "README.md"
description = "Utilities for the League of Legends Community"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "beartype>=0.22.9"
]

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
]

[tool.hatch.build]
sources = ["src"]
